--- a/public/styles.scss
+++ b/public/styles.scss
@@ -16,7 +16,7 @@ html {
   text-align: center;
   width: 100%;
   height: 100%;
-  overflow-y: hidden;
+  overflow-x: hidden;
   background: $black !important;
 }
 
@@ -44,44 +44,20 @@ html {
 #nav {
   display: flex;
   flex-direction: column;
-  width: 250px;
+  width: 100%;
 }
 
 #nav a {
   font-size: 36px;
   line-height: 36px;
   color: $teal;
-  font-family: "Anonymous Pro", monospace;
-  margin-bottom: 36px;
-  width: max-content;
+  width: 100%;
   text-decoration: none !important;
   position: relative;
   z-index: 2;
-  &:hover {
+  &:hover.link {
     color: $black;
-  }
-  &:hover:after {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 0;
-    height: 100%;
     background: $teal;
-    animation: dash 0.5s $bezier forwards;
-    z-index: -1;
-  }
-  &:not(:hover):after {
-    content: "";
-    position: absolute;
-    top: 0;
-    right: 0;
-    width: 0;
-    height: 100%;
-    background: $teal;
-    width: 100%;
-    animation: dash-off 0.5s $bezier forwards;
-    z-index: -1;
   }
 }
 
@@ -89,24 +65,13 @@ html {
   color: $white;
   & span {
     border-right: 2px solid transparent;
-    animation: blink-white 0.75s step-end infinite;
+    animation: blink-caret 0.75s step-end infinite;
   }
 }
 
 //Navigation animations
-@keyframes dash {
-  to {
-    width: 100%;
-  }
-}
 
-@keyframes dash-off {
-  to {
-    width: 0%;
-  }
-}
-
-@keyframes blink-white {
+@keyframes blink-caret {
   50% {
     border-color: $white;
   }
@@ -114,20 +79,31 @@ html {
 
 //Home
 .side-nav {
-  width: auto;
+  width: 18vw;
   height: 100vh;
   background: #232931;
   color: #4ecca3;
   box-sizing: border-box;
+  position: relative;
+  z-index: 20;
 }
 
 .nav-title {
   font-size: 75px;
   font-family: "Anonymous Pro", monospace;
   font-weight: 300;
-  overflow: hidden;
   letter-spacing: 3px;
-  line-height: 60px;
+  word-wrap: break-word;
+  line-height: 65px;
+  opacity: 0;
+  animation: fade-in 0.5s 1s ease-in forwards;
+}
+
+.home-title {
+  font-size: 86px;
+  font-family: "Anonymous Pro", monospace;
+  font-weight: 300;
+  letter-spacing: 3px;
 }
 
 .caret {
@@ -138,13 +114,14 @@ html {
 .sub-text {
   font-family: "Anonymous Pro", monospace;
   font-size: 1.2rem;
+  word-wrap: break-word;
   opacity: 0;
-  animation: fade-in 0.5s 2.2s ease-in forwards;
+  animation: fade-in 0.5s 1s ease-in forwards;
 }
 
 .nav {
   opacity: 0;
-  animation: fade-in 0.5s 2.5s ease-in forwards;
+  animation: fade-in 0.5s 1.5s ease-in forwards;
 }
 
 .fade-in {
@@ -179,9 +156,6 @@ html {
 }
 
 @keyframes fade-in {
-  from {
-    opacity: 0;
-  }
   to {
     opacity: 1;
   }
@@ -225,5 +199,38 @@ html {
   &:hover {
     background: $teal !important;
     color: $black !important;
+  }
+}
+
+.badge-white {
+  border: 1px solid $white !important;
+  color: $white !important;
+  border-radius: 100px !important;
+}
+
+.email {
+  color: $white !important;
+  text-decoration: none !important;
+  cursor: pointer;
+  &:hover {
+    color: $teal !important;
+  }
+}
+
+//Main content
+.scroll-up {
+  border: 1px solid $teal;
+  width: 50px;
+  height: 50px;
+  padding: 5px;
+  border-radius: 50%;
+  color: $teal;
+  position: fixed;
+  bottom: 70px;
+  right: 15px;
+  cursor: pointer;
+  &:hover {
+    background: $teal;
+    color: $black;
   }
 }
