--- a/public/dark-theme.css
+++ b/public/dark-theme.css
@@ -1,29 +1,76 @@
-@import url("https://fonts.googleapis.com/css2?family=Fira+Code:wght@200&family=Inconsolata:wdth,wght@75,300;100,300&family=Roboto+Mono:wght@300&display=swap");
-* {
-  margin: 0;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-}
-
-body,
-html {
-  text-align: center;
-  width: 100%;
-  height: 100%;
-  overflow-x: hidden;
-  background: #232931 !important;
-}
-
-#app {
+.dark-theme {
   font-family: "Inconsolata", monospace;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   text-align: center;
   font-weight: 300;
   color: #eee;
+  width: 100vw;
+  height: 100vh;
+  background: #232931 !important;
+  -webkit-transition: background 0.5s cubic-bezier(0.22, 0.65, 0.09, 0.79);
+  transition: background 0.5s cubic-bezier(0.22, 0.65, 0.09, 0.79);
+  /* //scrollbar style */
+  /* Handle */
 }
 
-.hr {
+.dark-theme .switch-position {
+  position: fixed;
+  top: 0;
+  right: 10px;
+  z-index: 15;
+}
+
+.dark-theme .switch-position .switch-body {
+  position: relative;
+  margin: auto;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  color: #4ecca3;
+}
+
+.dark-theme .switch-position .switch-body #checkbox {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: inherit;
+  height: 40px;
+  opacity: 0;
+  z-index: 16;
+  cursor: pointer;
+}
+
+.dark-theme .switch-position .switch-body #checkbox:checked ~ .switch .fas {
+  -webkit-transform: rotate(0);
+          transform: rotate(0);
+  -webkit-transition: -webkit-transform 0.5s cubic-bezier(0.22, 0.65, 0.09, 0.79);
+  transition: -webkit-transform 0.5s cubic-bezier(0.22, 0.65, 0.09, 0.79);
+  transition: transform 0.5s cubic-bezier(0.22, 0.65, 0.09, 0.79);
+  transition: transform 0.5s cubic-bezier(0.22, 0.65, 0.09, 0.79), -webkit-transform 0.5s cubic-bezier(0.22, 0.65, 0.09, 0.79);
+}
+
+.dark-theme .switch-position .switch-body #checkbox:not(:checked) ~ .switch .fas {
+  -webkit-transform: rotate(225deg);
+          transform: rotate(225deg);
+  -webkit-transition: -webkit-transform 0.5s cubic-bezier(0.22, 0.65, 0.09, 0.79);
+  transition: -webkit-transform 0.5s cubic-bezier(0.22, 0.65, 0.09, 0.79);
+  transition: transform 0.5s cubic-bezier(0.22, 0.65, 0.09, 0.79);
+  transition: transform 0.5s cubic-bezier(0.22, 0.65, 0.09, 0.79), -webkit-transform 0.5s cubic-bezier(0.22, 0.65, 0.09, 0.79);
+}
+
+.dark-theme .switch-position .switch-body .switch {
+  width: 40px;
+  height: 40px;
+  position: absolute;
+  left: 0;
+  border-radius: 50%;
+  display: -ms-grid;
+  display: grid;
+  place-items: center;
+}
+
+.dark-theme .hr {
   width: 1px;
   height: 90vh;
   background: #4ecca3;
@@ -35,7 +82,7 @@ html {
           transform: translate(0, -50%);
 }
 
-#nav {
+.dark-theme #nav {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -48,7 +95,7 @@ html {
   z-index: 20;
 }
 
-#nav a {
+.dark-theme #nav a {
   font-size: 36px;
   line-height: 36px;
   color: #4ecca3;
@@ -58,16 +105,16 @@ html {
   z-index: 2;
 }
 
-#nav a:hover.link {
+.dark-theme #nav a:hover.link {
   color: #232931;
   background: #4ecca3;
 }
 
-#nav a.router-link-exact-active {
+.dark-theme #nav a.router-link-exact-active {
   color: #eee;
 }
 
-#nav a.router-link-exact-active span {
+.dark-theme #nav a.router-link-exact-active span {
   border-right: 2px solid transparent;
   -webkit-animation: blink-caret 0.75s step-end infinite;
           animation: blink-caret 0.75s step-end infinite;
@@ -85,7 +132,7 @@ html {
   }
 }
 
-.side-nav {
+.dark-theme .side-nav {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -100,7 +147,7 @@ html {
       -ms-flex-direction: column;
           flex-direction: column;
   width: 18vw;
-  height: 90vh;
+  height: 100vh;
   background: #232931;
   color: #4ecca3;
   -webkit-box-sizing: border-box;
@@ -111,9 +158,11 @@ html {
   -webkit-transform: translate(0, -50%);
           transform: translate(0, -50%);
   z-index: 20;
+  -webkit-transition: background 0.5s cubic-bezier(0.22, 0.65, 0.09, 0.79);
+  transition: background 0.5s cubic-bezier(0.22, 0.65, 0.09, 0.79);
 }
 
-.nav-title {
+.dark-theme .nav-title {
   font-size: 60px;
   font-family: "Fira Code", monospace;
   letter-spacing: 0;
@@ -124,19 +173,19 @@ html {
           animation: fade-in 0.5s 1s ease-in forwards;
 }
 
-.home-title {
+.dark-theme .home-title {
   font-size: 86px;
   font-family: "Fira Code", monospace;
   letter-spacing: 3px;
 }
 
-.caret {
+.dark-theme .caret {
   border-right: 0.15rem solid #4ecca3;
   -webkit-animation: blink 0.75s step-end infinite;
           animation: blink 0.75s step-end infinite;
 }
 
-.sub-text {
+.dark-theme .sub-text {
   font-family: "Fira Code", monospace;
   font-size: 1.2rem;
   word-wrap: break-word;
@@ -145,13 +194,13 @@ html {
           animation: fade-in 0.5s 1s ease-in forwards;
 }
 
-.nav {
+.dark-theme .nav {
   opacity: 0;
   -webkit-animation: fade-in 0.5s 1.5s ease-in forwards;
           animation: fade-in 0.5s 1.5s ease-in forwards;
 }
 
-.fade-in {
+.dark-theme .fade-in {
   opacity: 0;
   -webkit-animation: fade-in 0.5s 0.7s ease-in forwards;
           animation: fade-in 0.5s 0.7s ease-in forwards;
@@ -231,16 +280,16 @@ html {
   }
 }
 
-.text-teal {
+.dark-theme .text-teal {
   color: #4ecca3;
 }
 
-.bg-teal {
+.dark-theme .bg-teal {
   border: 1px solid #4ecca3 !important;
   background: none !important;
 }
 
-.btn-teal {
+.dark-theme .btn-teal {
   background: transparent !important;
   border: 1px solid #4ecca3 !important;
   -webkit-box-sizing: border-box !important;
@@ -250,37 +299,114 @@ html {
   border-radius: 50% !important;
 }
 
-.btn-teal.active {
+.dark-theme .btn-teal.active {
   background: #4ecca3 !important;
 }
 
-.btn-outline-teal {
+.dark-theme .btn-outline-teal {
   border-color: #4ecca3 !important;
   color: #eee !important;
 }
 
-.btn-outline-teal:hover {
+.dark-theme .btn-outline-teal:hover {
   background: #4ecca3 !important;
   color: #232931 !important;
 }
 
-.badge-white {
+.dark-theme .badge-white {
   border: 1px solid #eee !important;
   color: #eee !important;
   border-radius: 100px !important;
 }
 
-.email {
+.dark-theme .email {
   color: #eee !important;
   text-decoration: none !important;
   cursor: pointer;
 }
 
-.email:hover {
+.dark-theme .email:hover {
   color: #4ecca3 !important;
 }
 
-.scroll-up {
+.dark-theme .title {
+  font-family: "Anonymous Pro", monospace;
+  color: #4ecca3;
+  font-size: 50px;
+  text-align: left;
+  margin-top: 50px;
+  opacity: 0;
+  -webkit-animation: fade-in 0.5s 0.7s forwards;
+          animation: fade-in 0.5s 0.7s forwards;
+}
+
+.dark-theme .container {
+  width: 100% !important;
+  max-width: 100% !important;
+  text-align: left;
+  border-left: 1px solid #4ecca3;
+  background: #2d3137;
+  color: #eee;
+  opacity: 0;
+  -webkit-animation: fade-in 0.5s 0.7s forwards;
+          animation: fade-in 0.5s 0.7s forwards;
+}
+
+.dark-theme .profile {
+  -o-object-fit: cover;
+     object-fit: cover;
+  width: 150px;
+  height: 150px;
+  -webkit-clip-path: circle(50%);
+          clip-path: circle(50%);
+  float: left;
+  margin-right: 10px;
+}
+
+.dark-theme .text-p {
+  font-size: 1.6rem;
+  font-weight: 300;
+}
+
+.dark-theme .logo {
+  position: relative;
+  margin-top: 20px;
+}
+
+.dark-theme .tooltip_c {
+  visibility: hidden;
+  position: fixed;
+  text-align: center;
+  top: 0;
+  left: 50%;
+  margin-left: -60px;
+  background: rgba(78, 204, 163, 0.8);
+  font-weight: bold;
+  color: #232931;
+  padding: 10px;
+  width: 100px;
+  z-index: 100;
+}
+
+.dark-theme .visible {
+  visibility: visible;
+}
+
+.dark-theme .container div:nth-child(2) {
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+}
+
+.dark-theme .w-500 {
+  width: 500px;
+}
+
+.dark-theme .logo-name {
+  font-size: 13px;
+}
+
+.dark-theme .scroll-up {
   border: 1px solid #4ecca3;
   width: 50px;
   height: 50px;
@@ -293,32 +419,31 @@ html {
   cursor: pointer;
 }
 
-.scroll-up:hover {
+.dark-theme .scroll-up:hover {
   background: #4ecca3;
   color: #232931;
 }
 
-.hidden {
+.dark-theme .hidden {
   opacity: 0;
 }
 
-.slide-up-scroll {
+.dark-theme .slide-up-scroll {
   -webkit-animation: slide-up-scroll 0.7s cubic-bezier(0.22, 0.65, 0.09, 0.79) forwards;
           animation: slide-up-scroll 0.7s cubic-bezier(0.22, 0.65, 0.09, 0.79) forwards;
 }
 
-.slide-down-scroll {
+.dark-theme .slide-down-scroll {
   -webkit-animation: slide-down-scroll 0.7s cubic-bezier(0.22, 0.65, 0.09, 0.79) forwards;
           animation: slide-down-scroll 0.7s cubic-bezier(0.22, 0.65, 0.09, 0.79) forwards;
 }
 
-.main-content {
+.dark-theme .main-content {
   background: #232931;
   width: 80vw;
   position: absolute;
-  top: 50%;
+  top: 0;
   right: 0;
-  margin-top: -45vh;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -332,20 +457,20 @@ html {
   -webkit-animation: slide-down 0.5s forwards;
           animation: slide-down 0.5s forwards;
   scroll-behavior: smooth !important;
+  -webkit-transition: background 0.5s cubic-bezier(0.22, 0.65, 0.09, 0.79);
+  transition: background 0.5s cubic-bezier(0.22, 0.65, 0.09, 0.79);
 }
 
-/* //scrollbar style */
-.main-content::-webkit-scrollbar {
+.dark-theme .main-content::-webkit-scrollbar {
   background: #232931;
   width: 3px;
 }
 
-/* Handle */
-.main-content::-webkit-scrollbar-thumb {
+.dark-theme .main-content::-webkit-scrollbar-thumb {
   background: #4ecca3;
 }
 
-.menu {
+.dark-theme .menu {
   position: fixed;
   top: 0;
   left: 0;
@@ -358,7 +483,7 @@ html {
   transition: opacity 0.5s cubic-bezier(0.22, 0.65, 0.09, 0.79), top 0.5s cubic-bezier(0.22, 0.65, 0.09, 0.79);
 }
 
-.menu .burger-check {
+.dark-theme .menu .burger-check {
   position: absolute;
   z-index: 2;
   top: 0;
@@ -371,37 +496,37 @@ html {
   cursor: pointer;
 }
 
-.menu .burger-check:checked ~ .burger div:nth-child(1) {
+.dark-theme .menu .burger-check:checked ~ .burger div:nth-child(1) {
   -webkit-animation: down 0.5s cubic-bezier(0.39, 0.97, 0, 0.97) forwards;
           animation: down 0.5s cubic-bezier(0.39, 0.97, 0, 0.97) forwards;
 }
 
-.menu .burger-check:checked ~ .burger div:nth-child(2) {
+.dark-theme .menu .burger-check:checked ~ .burger div:nth-child(2) {
   -webkit-animation: gone 0.5s cubic-bezier(0.39, 0.97, 0, 0.97) forwards;
           animation: gone 0.5s cubic-bezier(0.39, 0.97, 0, 0.97) forwards;
 }
 
-.menu .burger-check:checked ~ .burger div:nth-child(3) {
+.dark-theme .menu .burger-check:checked ~ .burger div:nth-child(3) {
   -webkit-animation: up 0.5s cubic-bezier(0.39, 0.97, 0, 0.97) forwards;
           animation: up 0.5s cubic-bezier(0.39, 0.97, 0, 0.97) forwards;
 }
 
-.menu .burger-check:not(:checked) ~ .burger div:nth-child(1) {
+.dark-theme .menu .burger-check:not(:checked) ~ .burger div:nth-child(1) {
   -webkit-animation: rev-up 0.5s cubic-bezier(0.39, 0.97, 0, 0.97) forwards;
           animation: rev-up 0.5s cubic-bezier(0.39, 0.97, 0, 0.97) forwards;
 }
 
-.menu .burger-check:not(:checked) ~ .burger div:nth-child(2) {
+.dark-theme .menu .burger-check:not(:checked) ~ .burger div:nth-child(2) {
   -webkit-animation: rev-appear 0.5s cubic-bezier(0.39, 0.97, 0, 0.97) forwards;
           animation: rev-appear 0.5s cubic-bezier(0.39, 0.97, 0, 0.97) forwards;
 }
 
-.menu .burger-check:not(:checked) ~ .burger div:nth-child(3) {
+.dark-theme .menu .burger-check:not(:checked) ~ .burger div:nth-child(3) {
   -webkit-animation: rev-down 0.5s cubic-bezier(0.39, 0.97, 0, 0.97) forwards;
           animation: rev-down 0.5s cubic-bezier(0.39, 0.97, 0, 0.97) forwards;
 }
 
-.menu .burger {
+.dark-theme .menu .burger {
   position: absolute;
   top: 50%;
   left: 50%;
@@ -409,7 +534,7 @@ html {
           transform: translate(-50%, -50%);
 }
 
-.menu .burger .bar {
+.dark-theme .menu .burger .bar {
   width: 35px;
   height: 3px;
   position: relative;
@@ -457,7 +582,7 @@ html {
     height: 0;
   }
   to {
-    height: 90vh;
+    height: 100vh;
   }
 }
 
@@ -466,7 +591,7 @@ html {
     height: 0;
   }
   to {
-    height: 90vh;
+    height: 100vh;
   }
 }
 
@@ -627,47 +752,47 @@ html {
 }
 
 @media (max-width: 1470px) {
-  .main-content {
+  .dark-theme .main-content {
     width: 75vw;
   }
-  .side-nav {
+  .dark-theme .side-nav {
     width: 23vw;
   }
-  #project-carousel {
+  .dark-theme #project-carousel {
     width: 90% !important;
   }
 }
 
 @media (max-width: 1180px) {
-  .main-content {
+  .dark-theme .main-content {
     width: 70vw;
   }
-  .side-nav {
+  .dark-theme .side-nav {
     width: 27vw;
   }
-  #project-carousel {
+  .dark-theme #project-carousel {
     width: 100% !important;
   }
 }
 
 @media (max-width: 975px) {
-  .side-nav {
+  .dark-theme .side-nav {
     opacity: 0;
     width: 0;
     -webkit-transition: opacity 0.5s cubic-bezier(0.39, 0.97, 0, 0.97), width 0.5s cubic-bezier(0.39, 0.97, 0, 0.97);
     transition: opacity 0.5s cubic-bezier(0.39, 0.97, 0, 0.97), width 0.5s cubic-bezier(0.39, 0.97, 0, 0.97);
   }
-  .main-content {
+  .dark-theme .main-content {
     width: 100vw;
     padding: 30px;
   }
-  .menu {
+  .dark-theme .menu {
     opacity: 1;
-    top: 50px;
+    top: 10px;
     -webkit-transition: opacity 0.5s cubic-bezier(0.22, 0.65, 0.09, 0.79), top 0.5s cubic-bezier(0.22, 0.65, 0.09, 0.79);
     transition: opacity 0.5s cubic-bezier(0.22, 0.65, 0.09, 0.79), top 0.5s cubic-bezier(0.22, 0.65, 0.09, 0.79);
   }
-  .show-side-nav {
+  .dark-theme .show-side-nav {
     opacity: 1;
     width: 350px;
     z-index: 120;
@@ -679,14 +804,14 @@ html {
 }
 
 @media (max-width: 700px) {
-  .title {
+  .dark-theme .title {
     font-size: 45px !important;
   }
 }
 
 @media (max-width: 570px) {
-  .title {
+  .dark-theme .title {
     font-size: 40px !important;
   }
 }
-/*# sourceMappingURL=styles.css.map */
+/*# sourceMappingURL=dark-theme.css.map */
