change side nav height and width

--- a/public/css/dark-theme.css
+++ b/public/css/dark-theme.css
@@ -147,7 +147,7 @@
       -ms-flex-direction: column;
           flex-direction: column;
   width: 18vw;
-  height: -webkit-fill-available;
+  height: 100vh;
   background: #232931;
   color: #4ecca3;
   -webkit-box-sizing: border-box;
