--- a/public/css/variables.scss
+++ b/public/css/variables.scss
@@ -8,5 +8,5 @@ $bezier: cubic-bezier(0.22, 0.65, 0.09, 0.79);
 $timing: cubic-bezier(0.39, 0.97, 0, 0.97);
 $mc-width: 80vw;
 $title-font: "Fira Code", monospace;
-$main-height: -webkit-fill-available;
+$main-height: 100vh;
 $rotate-icon: rotate(225deg);
