--- a/public/css/dark-theme.css
+++ b/public/css/dark-theme.css
@@ -152,7 +152,7 @@
   color: #4ecca3;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-  position: absolute;
+  position: fixed;
   top: 50%;
   left: 0;
   -webkit-transform: translate(0, -50%);
