--- a/public/css/light-theme.scss
+++ b/public/css/light-theme.scss
@@ -145,7 +145,7 @@
     background: $teal-lt;
     color: $black-lt;
     box-sizing: border-box;
-    position: absolute;
+    position: fixed;
     top: 50%;
     left: 0;
     transform: translate(0, -50%);
