--- a/public/css/main.css
+++ b/public/css/main.css
@@ -167,7 +167,7 @@ html {
   color: #4ecca3;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-  position: absolute;
+  position: fixed;
   top: 50%;
   left: 0;
   -webkit-transform: translate(0, -50%);
@@ -1014,7 +1014,7 @@ html {
   color: #232931;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-  position: absolute;
+  position: fixed;
   top: 50%;
   left: 0;
   -webkit-transform: translate(0, -50%);
